--- a/translator.html
+++ b/translator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto - IA</title>
+    <title>Tradutor</title>
 
     <link rel="stylesheet" href="./css/translate.css">
     <script src="js/pesquisar_tradutor.js" defer type="module"></script>
