Finalização e adição de mais idiomas na página do Tradutor

--- a/translator.html
+++ b/translator.html
@@ -28,7 +28,9 @@
     </header>
     <main>
         <div class="conteudo" id="caixa-pergunta">
-            <div id="logo-ia"></div>
+            <div id="logo-ia">
+                <label for="Tradutor">Tradutor</label>
+            </div>
             <div id="pergunta-ia">
                 <div id="sel-menu">
                     <form action="#">
@@ -36,6 +38,8 @@
                         <select id="lang">
                             <option value="Inglês">Inglês</option>
                             <option value="Português">Português</option>
+                            <option value="Espanhol">Espanhol</option>
+                            <option value="Italiano">Italiano</option>
                         </select>
                     </form>
                 </div>
@@ -53,6 +57,8 @@
                         <select id="lang-out">
                             <option value="Inglês">Inglês</option>
                             <option value="Português">Português</option>
+                            <option value="Espanhol">Espanhol</option>
+                            <option value="Italiano">Italiano</option>
                         </select>
                     </form>
                 </div>
